src/components/Sidebar/index.css
.MuiCardContent-root .MuiListItem-gutters {
    padding-left: 32px;
    padding-right: 32px;
    margin: 0 -16px;
    width: calc(100% + 32px);
}

html body .sidebarContentCard{
	position: relative;
	overflow: visible;
	border-bottom-right-radius: 0;
	border-bottom-left-radius: 0;
	flex-grow: 1;

	/*transition: background-color var(--transition-time) var(--timing-function);*/
}


html body .improveFab{
	z-index: var(--z-index-fabs);
	position: fixed;

	bottom: 16px;
	left: 16px;
}
html body .improveFab .icon{
	color: var(--light-green);
	margin-right: 8px;
}
@media (max-width: 500px) {
	html body .improveFab{
		right: 16px;
		left: auto;
	}
}

